ext/io/console/extconf.rb
@@ -18,6 +18,7 @@ end
 if ok
   have_header("sys/ioctl.h") if hdr
   have_func("rb_funcallv")
+  have_func("rb_sym2str")
   # rb_check_hash_type: 1.9.3
   # rb_io_get_write_io: 1.9.1
   # rb_cloexec_open: 2.0.0
